@@ -1,3 +1,8 @@
+* Feb  2 2023 Massimiliano Pala <madwolf@openca.org>
+- Added new pki-oid tool for OIDs and NIDs lookup
+- Fixed inverted digest/pkey ID retrieval in PKI_X509_ALGOR_VALUE_get_scheme()
+- Fixed test3 by removing the DSA key generation
+
 * Nov 23 2022 Massimiliano Pala <madwolf@openca.org>
 - Refactored Composite CTX structure to better handling signing
 - Fixed several memory leaks that affected the multi-key signatures
